--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>grid area</title>
-    <link rel="stylesheet" href="styles/grid-area.css">
+    <link rel="stylesheet" href="css/grid-area.css">
 </head>
 <body class="container">
     <header class="header">
